--- a/PixBeat5/PixBeat5.csproj
+++ b/PixBeat5/PixBeat5.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<!--PixBeat5/PixBeat5.csproj-->
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
@@ -18,11 +19,11 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
 		<PackageReference Include="NAudio" Version="2.2.1" />
 		<PackageReference Include="SkiaSharp.Views.WPF" Version="2.88.6" />
 		<PackageReference Include="FFMpegCore" Version="5.1.0" />
 		<PackageReference Include="System.Text.Json" Version="8.0.3" />
-		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2420.47" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -36,9 +37,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Assets\" />
-	  <Folder Include="Controls\" />
-	  <Folder Include="Views\" />
+		<Folder Include="Assets\" />
+		<Folder Include="Controls\" />
+		<Folder Include="Views\" />
 	</ItemGroup>
 
 </Project>
